# guile-png

./: .gitignore  ARCHITECTURE.org  AUTHORS  ChangeLog  Makefile.am  NEWS  README.org  configure.ac  guix.scm
.github/workflows/: guile2.2.yml  guile3.0.yml  guix.yml
build-aux/: pre-inst-env.in
build-aux/am/: Makefile.am
doc/: .gitignore  Makefile.am  guile-png-installation.texi  guile-png.texi  indices.texi
examples/: .gitignore  Makefile.am  image-processing-invert-colors.scm  image-processing-invert-colors.scm.in  image-processing-solarize.scm  image-processing-solarize.scm.in  print-chunks.scm  print-chunks.scm.in  sierpinski-carpet-animation.scm.in  sierpinski-carpet.scm.in  sierpinski-triangle.scm.in
modules/: Makefile.am  png.scm
modules/png/: .gitignore  Makefile.am  chunk-converter.scm  chunk-decoder.scm  filter.scm  fsm-chunk-context.scm  fsm-chunk.scm  fsm-context.scm  fsm-signature-context.scm  fsm-signature.scm  fsm.puml  graphics.scm  image-processing.scm  image.scm  pixel.scm  tools.scm  version.scm.in
modules/png/cli/: Makefile.am  command-describe.scm  common.scm
modules/png/core/: Makefile.am  chunk-bkgd.scm  chunk-chrm.scm  chunk-iccp.scm  chunk-iend.scm  chunk-ihdr.scm  chunk-phys.scm  chunk-plte.scm  chunk-text.scm  chunk-time.scm  chunk-ztxt.scm  chunk.scm  color-type.scm  common.scm  crc.scm  error.scm  filter.scm
modules/png/core/chunk/: IEND.scm  IHDR.scm  Makefile.am  PLTE.scm  bKGD.scm  bkgd.scm  cHRM.scm  chrm.scm  gama.scm  hist.scm  iCCP.scm  iccp.scm  iend.scm  ihdr.scm  itxt.scm  ornt.scm  pHYs.scm  phys.scm  plte.scm  tEXT.scm  tEXt.scm  tIME.scm  text.scm  time.scm  trns.scm  vpag.scm  zTXt.scm  ztxt.scm
modules/png/fsm/: .gitignore  Makefile.am  chunk-context.scm  chunk-parser.puml  context.scm  png-context.scm  signature-context.scm  signature-parser.puml
modules/png/graphics/: Makefile.am  circle.scm  dimension.scm  ellipse.scm  filled-rectangle.scm  graphic.scm  hexagon.scm  line.scm  multiline.scm  pixel.scm  point.scm  polygon.scm  rectangle.scm  regular-polygon.scm  selection.scm
modules/png/image-processing/: Makefile.am  blur.scm  grayscale.scm  invert-colors.scm  rotate.scm  solarize.scm  transform.scm
tests/: .gitignore  Makefile.am  README.org  chunks.scm  cli.scm  common.scm  core-filter.scm  crc.scm  filter.scm  fsm-context.scm  graphics.scm  image-processing.scm  image.scm
utils/: Makefile.am  png.in
